--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,11 @@
     <string name="action_settings">Settings</string>
     <string name="edit_name_label">Insert Name</string>
     <string name="insert_problem">Insert Problem</string>
+    <string name="additional_hint">this includes any allergies, medication you are currently taking, previous visits etc</string>
+    <string name="medicare_num">XXXXXXXXXX</string>
     <string-array name="Gender">
         <item>Male</item>
         <item>Female</item>
-        <item>Intersex</item>
     </string-array>
 
     <string-array name="ETA">
@@ -15,5 +16,7 @@
        <item>45 Minutes</item>
        <item>60 Minutes</item>
     </string-array>
+
+    <string name="symptoms">Include any problems you are experiencing</string>
 
 </resources>
